--- a/static/css/time.css
+++ b/static/css/time.css
@@ -23,9 +23,6 @@ body {
   display: flex;
   flex-direction: column;
 
-  transform: translateX(0);
-  transition: transform 0.3s ease-in-out;
-
   z-index: 3;
 }
 
@@ -40,8 +37,8 @@ body {
 .sidebar > .logo > .div-left {
   width: 70%;
 }
+
 .sidebar > .logo > .div-right {
-  /* width: 30%; */
   width: 2rem;
   height: 2rem;
   border-radius: 0.625rem;
@@ -49,6 +46,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: inherit;
+  display: none;
 }
 
 .sidebar .brand-item {
@@ -66,6 +64,8 @@ body {
   background: #fff;
 
   padding: 3%;
+
+  width: 100%;
 }
 
 .sidebar .brand-item-dropdown .dropdown-menu .dropdown-item {
@@ -90,6 +90,8 @@ body {
   text-transform: capitalize;
 
   border-bottom: none !important;
+
+  padding: 5%;
 }
 
 .sidebar .setting-item-dropdown .dropdown-menu {
@@ -98,6 +100,8 @@ body {
   background: #fff;
 
   padding: 3%;
+
+  width: 100%;
 }
 
 .sidebar .setting-item-dropdown .dropdown-menu .dropdown-item {
@@ -157,13 +161,9 @@ body {
 }
 
 .center {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  height: max-content;
   width: 100%;
-  justify-content: center;
+  height: 60%;
+  margin-top: 40%;
   flex-grow: 1;
 }
 
@@ -173,7 +173,7 @@ body {
 
 .sidebar .submenu {
   display: none;
-  height: 20%;
+  height: initial;
 }
 
 .sidebar .submenu .sub-menu-item .item {
@@ -235,6 +235,8 @@ body {
 .main-panel .topbar {
   padding: 1% 1% 0% 1%;
   height: 9%;
+  position: relative;
+  z-index: 1;
 }
 
 .main-panel .topbar > .main-head {
@@ -269,12 +271,17 @@ body {
   padding-top: 1%;
   padding-left: 1%;
   padding-right: 1%;
+  padding-bottom: 1%;
 }
 
 .main-panel .main-head .right-side {
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.main-panel .main-head .right-side > button {
+  display: none;
 }
 
 .main-panel .main-head .right-side .dropdown-toggle {
@@ -315,6 +322,262 @@ body {
   text-transform: capitalize;
 }
 
+.main-panel .main-head .right-side .profile-item-dropdown .dropdown-menu {
+  border-radius: 0.625rem;
+  border: 1px solid #dfd9ef;
+  background: #fff;
+
+  width: 100%;
+  margin-top: 5% !important;
+
+  padding: 2%;
+}
+
+.main-panel
+  .main-head
+  .right-side
+  .profile-item-dropdown
+  .dropdown-menu
+  .dropdown-item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 4%;
+
+  border-bottom: 1px solid #621dec52;
+}
+
+.main-panel
+  .main-head
+  .right-side
+  .profile-item-dropdown
+  .dropdown-menu
+  .dropdown-item
+  .icon {
+  width: 2rem;
+  height: 2rem;
+
+  border-radius: 3.75rem;
+
+  background: #fff;
+  filter: drop-shadow(0px 4px 4px rgba(151, 137, 178, 0.2));
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-panel
+  .main-head
+  .right-side
+  .profile-item-dropdown
+  .dropdown-menu
+  .dropdown-item
+  .icon
+  img {
+  width: 1.25rem;
+  height: 0.875rem;
+}
+
+.main-panel
+  .main-head
+  .right-side
+  .profile-item-dropdown
+  .dropdown-menu
+  .dropdown-item
+  > .text
+  > span {
+  color: #150337;
+  font-size: 0.9375rem;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.main-panel
+  .main-head
+  .right-side
+  .profile-item-dropdown
+  .dropdown-menu
+  .new-dropdown-item {
+  color: #601aec;
+  font-size: 0.9375rem;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+
+  border-bottom: none !important;
+
+  padding: 5%;
+}
+
+.main-panel .main-content .content {
+  overflow: auto;
+  height: 100%;
+}
+
+.main-panel .main-content .filter-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0% 3%;
+}
+
+.main-panel .main-content .filter-div .first-half {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.main-panel .main-content .filter-div .first-half .text > span {
+  color: #150337;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.main-panel .main-content .filter-div .first-half > .input select {
+  border-radius: 0.625rem;
+  border: 1px solid #dfd9ef;
+  padding: 2%;
+
+  height: 2.3125rem;
+  width: 13.5625rem;
+
+  background: url(../images/Arrow-2.png) no-repeat right #ffffff;
+  background-position-x: 97%;
+
+  appearance: none;
+
+  color: #8270a3;
+  font-size: 0.9375rem;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.main-panel .main-content .filter-div .first-half > .input select:focus {
+  outline: none;
+}
+
+.main-panel .main-content .filter-div .second-half .filters .check-box {
+  display: flex;
+  align-items: center;
+
+  gap: 0.5rem;
+}
+
+.main-panel
+  .main-content
+  .filter-div
+  .second-half
+  .filters
+  .check-box
+  input[type="checkbox"] {
+  width: 0.875rem;
+  height: 0.875rem;
+  margin-left: 1rem;
+}
+
+.main-panel
+  .main-content
+  .filter-div
+  .second-half
+  .filters
+  .check-box
+  input[type="checkbox"]:checked {
+  accent-color: #8270a3;
+  border: none;
+}
+
+.main-panel .main-content .filter-div .second-half .filters .check-box > span {
+  color: #67548b;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.9375rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.main-panel .main-content .filter-div .second-half .filters {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.main-panel
+  .main-content
+  .filter-div
+  .second-half
+  .filters
+  > .filter-1
+  > select,
+.main-panel
+  .main-content
+  .filter-div
+  .second-half
+  .filters
+  > .filter-2
+  > select {
+  border-radius: 0.625rem;
+  border: 1px solid #dfd9ef;
+  padding: 2%;
+
+  width: 13.5625rem;
+  height: 2.3125rem;
+
+  background: url(../images/Arrow-2.png) no-repeat right #ffffff;
+  background-position-x: 97%;
+
+  appearance: none;
+
+  color: #8270a3;
+  font-size: 0.9375rem;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.main-panel
+  .main-content
+  .filter-div
+  .second-half
+  .filters
+  > .filter-1
+  > select:focus,
+.main-panel
+  .main-content
+  .filter-div
+  .second-half
+  .filters
+  > .filter-2
+  > select:focus {
+  outline: none;
+}
+
+.main-panel .main-content .graph-card {
+  border-radius: 1.25rem;
+  border: 2px solid #fff;
+  background: rgba(255, 255, 255, 0.56);
+  backdrop-filter: blur(10px);
+
+  padding: 1rem;
+
+  margin-top: 1rem;
+}
+
 @media (max-width: 1200px) {
   .sidebar {
     width: 20%;
@@ -335,28 +598,53 @@ body {
   }
 }
 
-/* @media (max-width: 786px) {
-  .sidebar .logo .div-left .logo-img > img {
-    width: 30px;
-    height: 30px;
+@media (max-width: 786px) {
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    display: none;
+    opacity: 0;
+  }
+
+  .overlay-visible {
+    display: block;
+    opacity: 1;
   }
 
   .sidebar {
-    width: 4rem;
-  }
-
-  .main-panel .main-content {
-    width: 90%;
-  }
-
-  .main-panel .topbar {
-    width: 90%;
-  }
-  .sidebar .brand-item .icon-text .text {
+    width: 50%;
     display: none;
+    z-index: 2;
+    box-shadow: 3px 0 20px 0 rgba(0, 0, 0, 0.51);
   }
 
-  .sidebar .submenu .sub-menu-item .item > div span {
-    font-size: x-small;
+  .sidebar > .logo > .div-right {
+    display: block;
   }
-} */
+
+  .main-panel .main-head .right-side > button {
+    display: block;
+  }
+
+  .sidebar-open {
+    display: flex;
+    transform: translateZ(0);
+    transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  }
+
+  .main-panel {
+    width: 100%;
+    z-index: 0;
+  }
+}
+
+@media (max-width: 350px) {
+  .sidebar {
+    width: 60%;
+  }
+}
